[package]
name = "durust"
version = "0.1.0"
edition = "2021"
description = "A DBOS-style durable execution library for Rust: write normal async code, checkpoint every step to a database, resume exactly where you left off after a crash."
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
thiserror = "1"
tracing = "0.1"
inventory = "0.3"
uuid = { version = "1", features = ["v4"] }
cron = "0.12"
base64 = "0.21"
# Admin HTTP control surface (opt-in via `AdminServer::start`). Default features
# give the tokio/http1/json stack the handlers need.
axum = "0.7"
# Conductor websocket client (opt-in via `Conductor::start`). rustls to match the
# rest of the TLS stack; `futures-util` drives the split Sink/Stream.
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# CancellationToken for structured, level-triggered shutdown of the conductor
# connection loop (and the sub-tasks later parts will spawn).
tokio-util = { version = "0.7", default-features = false }
durust-macros = { path = "durust-macros", version = "0.1" }
# Postgres backend. If your sqlx version complains about features, see README.
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "json", "chrono", "migrate"] }
# Crash-injection hooks (e.g. in the schedule fire loop). Without the
# `failpoints` feature every `fail_point!` compiles to a no-op, so this is
# zero-cost in normal builds; tests/examples turn the feature on (below).
fail = "0.5"

[dev-dependencies]
tracing-subscriber = "0.3"
# A local websocket server for the conductor client tests.
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# Arm the failpoints above during tests and the `order` crash-recovery demo.
# Cargo unifies features within a build, so this enables `fail/failpoints` for
# the library too — making the `fail_point!` hooks active under test.
fail = { version = "0.5", features = ["failpoints"] }

[[example]]
name = "order"
path = "examples/order.rs"
