[package]
name = "durare"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "A DBOS-compatible durable execution SDK for Rust: write ordinary async code, checkpoint every step to Postgres or SQLite, and resume exactly where you left off after a crash."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SamuelXing/durare"
homepage = "https://github.com/SamuelXing/durare"
documentation = "https://docs.rs/durare"
readme = "README.md"
keywords = ["durable-execution", "workflow", "dbos", "orchestration", "postgres"]
categories = ["asynchronous", "database"]

# Make the companion proc-macro crate a workspace member (it is already a path
# dependency below), so `cargo <cmd> -p durare-macros` works from the root and
# the two crates share one lockfile. Publishing stays two steps: durare-macros
# first, then durare.
[workspace]
members = ["durare-macros"]
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
thiserror = "1"
tracing = "0.1"
inventory = "0.3"
uuid = { version = "1", features = ["v4"] }
cron = "0.12"
base64 = "0.21"
# Default application version: sha-256 of the running executable, so distinct
# builds get distinct versions and version-gated dispatch/recovery works.
sha2 = "0.10"
# gzip framing for the conductor's portable workflow export/import payloads.
flate2 = "1"
# Admin HTTP control surface (opt-in via `AdminServer::start`). Default features
# give the tokio/http1/json stack the handlers need.
axum = "0.7"
# Conductor websocket client (opt-in via `Conductor::start`). rustls to match the
# rest of the TLS stack; `futures-util` drives the split Sink/Stream.
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# CancellationToken for structured, level-triggered shutdown of the conductor
# connection loop (and the sub-tasks later parts will spawn).
tokio-util = { version = "0.7", default-features = false }
durare-macros = { path = "durare-macros", version = "0.1" }
# Postgres backend. If your sqlx version complains about features, see README.
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "json", "chrono", "migrate"] }
# Crash-injection hooks (e.g. in the schedule fire loop). Without the
# `failpoints` feature every `fail_point!` compiles to a no-op, so this is
# zero-cost in normal builds; tests/examples turn the feature on (below).
fail = "0.5"

[dev-dependencies]
tracing-subscriber = "0.3"
# A local websocket server for the conductor client tests.
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# Arm the failpoints above during tests and the `order` crash-recovery demo.
# Cargo unifies features within a build, so this enables `fail/failpoints` for
# the library too — making the `fail_point!` hooks active under test.
fail = { version = "0.5", features = ["failpoints"] }

[[example]]
name = "order"
path = "examples/order.rs"

[[example]]
name = "saga"
path = "examples/saga.rs"

[[example]]
name = "pipeline"
path = "examples/pipeline.rs"

[[example]]
name = "scheduled"
path = "examples/scheduled.rs"

[[example]]
name = "transfer"
path = "examples/transfer.rs"

[[example]]
name = "approval"
path = "examples/approval.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "timer"
path = "examples/timer.rs"

[[example]]
name = "subworkflow"
path = "examples/subworkflow.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"
